PR/39583: Brad du Plessis: acrmsr(4) driver doesn't report number of volumes correctly to bioctl(8) PR/39584: Juan RP: arcmsr(4) driver disk state values are incorrect (for ARC-1220)